--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ TDA2005-amplifiers/KiCad/2-channel_tone,_balance_and_loudness_amplifier/2-channe
 TDA2005-amplifiers/KiCad/2-channel_tone,_balance_and_loudness_amplifier/~2-channel_tone,_balance_and_loudness_amplifier.kicad_sch.lck
 TDA2005R/KiCad/TDA2005R-1.1/TDA2005R-1.1-backups/
 Uber I2C LCD Controller Module/KiCad/Uber I2C LCD Controller Module/Uber I2C LCD Controller Module-backups/
+RPi IR Receiver/KiCAD/RPi-LibreELEC IR Receiver/RPi-LibreELEC IR Receiver-backups/
